--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: Welcome!
 ---
 
-![](Images/logo_website.png){fig-align="center" width="378"}
+![](Images/logo_website.png){fig-alt="AI-generated image" fig-align="center" width="301"}
 
 ::: text-center
 PyRUU is a website created by lecturers at Utrecht University to teach data science in both R and Python to anyone wishing to learn these programming languages for exploring, visualising, and analysing real-world data.
