--- a/Courses/Statistics_GSS/Tutorials/prerequisites.qmd
+++ b/Courses/Statistics_GSS/Tutorials/prerequisites.qmd
@@ -2,7 +2,7 @@
 title: "Prerequisites"
 ---
 
-To make the best out of these tutorials, you will need to install three things on your computer: R, RStudio, and a collection of R packages called *tidyverse*. If other R packages are needed, we will always mention them at the beginning of each tutorial.
+To make the best out of these tutorials, you will need to install two things on your computer: R and RStudio.
 
 ## Step 1: Installing R
 
@@ -11,14 +11,3 @@ You can download R for Linux, macOS, or Windows on the [CRAN website](https://cr
 ## Step 2: Installing RStudio
 
 RStudio is an integrated development environment (IDE) for R (and other languages such as Python) developed by [Posit](https://posit.co/), an open-source data science company. We highly recommend using RStudio, which will make your experience of working with R much more enjoyable. With RStudio, you can easily write your own scripts, run R code, manage your workspace, install and load R packages, view graphical output, and much more! You can download RStudio on the [Posit website](https://posit.co/products/open-source/rstudio/).
-
-## Step 3: Installing *tidyverse*
-
-[*tidyverse*](https://www.tidyverse.org/) is a collection of R packages for data science. When installing *tidyverse*, you will install a suite of R packages that are very commonly used when processing and visualising data, such as *readr*, *dyplr*, *tibble*, *ggplot2*, and more! After opening RStudio, you can install *tidyverse* by executing the following code in your R console:
-
-```{r}
-#| eval: false
-#| echo: true
-#| code-fold: false
-install.packages("tidyverse")
-```
