--- a/Courses/Statistics_GSS/Tutorials/prologue.qmd
+++ b/Courses/Statistics_GSS/Tutorials/prologue.qmd
@@ -2,14 +2,8 @@
 title: Welcome to the Statistics GSS course!
 ---
 
-## Prologue
+Each tutorial is designed as a step-by-step guide to common data analysis tasks. Alongside the R code, we explain the goal of each step and the purpose of the functions used. By default, the code is hidden so that you can try writing it yourself (this is the most effective way to learn R). We always indicate which function you need for each task, but we strongly encourage you to type the code rather than copy and paste it, as this helps you become familiar with the R syntax and remember commands more easily. Use the R help pages to learn more about the functions you encounter. If you get stuck, you can reveal the solution by clicking on “**Show me the code**”, or display all code at once using “**Show All Code**” from the Code menu at the top right of the page.
 
-This [Quarto](https://quarto.org/) website has been created to provide you with a single, searchable platform containing all the tutorials and R code used during our Statistics GSS course. We hope you will find it useful for learning data analysis in R and working on your course assignments.
+Rather than passively reading the tutorials, we encourage you to work through them actively and take time to understand what each function does. Learning R can feel challenging at first, but this is normal. Like learning a new language, progress comes with regular practice: you start with simple commands and gradually build fluency by reusing them. With patience and practice, your skills will quickly improve.
 
-The effectiveness of these tutorials lies in their practical approach. Instead of quickly scrolling down our tutorials and simply reading R code, we encourage you to [actively use it]{.underline} and to [take the time]{.underline} to understand what each function does. Even if you find learning R difficult at first, don't give up and just keep learning at the pace that suits you. Learning R is exactly like learning a new language. At first, you can only write and speak short, simple sentences, but with regular practice, you will soon be able to write and understand the language fluently. The best way to learn R is by practicing it and reusing the same commands over and over again.
-
-Now get ready to improve your data science skills. Let's get started!
-
-## How to use our tutorials to learn R
-
-Each tutorial is designed as a step-by-step guide to performing specific tasks that are very commonly used in data science. As well as providing the R code, we take care to explain what we want to do and what each function does. By default, the R code is hidden from you, so you can try writing the R code yourself (it is the best way to learn R). We always tell you which function you need to use to perform each task. Use the R help pages to find out more about these functions. If you get stuck and want to see how the R code should be written, just click on "Show me the code". If you have never used R before and want to see the whole R code from the beginning, you can click on "Show All Code" in the Code menu at the top right of each tutorial page.
+Now get ready to build your statistics skills. Let’s get started!
